# sample

./: .gitignore  .mypy.ini  .pre-commit  .pre-commit-config.yaml  .pylintrc  ACCESS.md  README.md  conftest.py  pre-commit  pull_request_template.md  pyproject.toml  requirements.txt  setup.py  setup_pkg.sh
.github/workflows/: checks.yaml
configs/: train_mnist.yaml
mypkg/: log.py  utils.py
mypkg/models/: __init__.py  mlp.py
mypkg/scripts/train_mnist/: run_train_mnist.py
scripts/: test_ci.py  train_mnist.py
scripts/train_mnist/: run_train_mnist.py
tests/: test_mlp.py
