[project]
name = "mypkg"
version = "0.0.1"
description = "Sample repository using Apollo best engineering practices"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "torch~=2.2.0",
    "torchvision~=0.17.0",
    "pydantic~=2.0",
    "wandb~=0.16.2",
    "fire~=0.5.0",
    "tqdm~=4.65.0",
    "pytest~=8.0.0",
    "ipykernel~=6.29.0",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.1.14",
    "pyright~=1.1.348",
    "pre-commit~=3.6.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mypkg"]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.pyright]
include = ["mypkg", "tests"]

strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportFunctionMemberAccess = true
reportUnknownParameterType = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructorType = true
reportOverlappingOverload = true
reportConstantRedefinition = true
reportImportCycles = true
reportPropertyTypeMismatch = true
reportMissingTypeArgument = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnusedExpression = true
reportMatchNotExhaustive = true
reportShadowedImports = true
reportPrivateImportUsage = false
